@@ -4,19 +4,17 @@
 	<artifactId>image-converter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<!-- <parent> <groupId>org.allset.java</groupId> <artifactId>allset-java</artifactId> <version>1.0.1-SNAPSHOT</version> </parent> -->
+	<parent>
+		<groupId>org.allset.java</groupId>
+		<artifactId>allset-java</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</parent>
 
 	<properties>
 		<maven.compiler.release>11</maven.compiler.release>
 
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 		<junit-platform.version>5.3.1</junit-platform.version>
-		
-		
-		<!-- illegal-access=permit  Skipping JaCoCo execution due to missing execution data file. surefire and jacoco -->
-		<argLine>-Dfile.encoding=${project.build.sourceEncoding} --illegal-access=permit</argLine>
+
 	</properties>
 
 
@@ -147,46 +145,6 @@
 
 	<build>
 		<plugins>
-
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.3</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
-				<configuration>
-					<argLine>
-						@{argLine} --illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<generateBackupPoms>false</generateBackupPoms>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
